// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Malison of Lauds > Call → Response: the bare heart "Wounded" past 65 % splits into two bodies joined by a light-thread 1`] = `
"2.02 initial LaudsMalison radius=42 hp=100 @(660,440)
2.05 cue burn
2.18 cue burn
2.23 cue burn
2.43 cue burn
2.52 cue burn
2.53 rate COOL "Silenced" +105 combo=1
2.65 flag brand-flesh
2.65 say "Careful! The brand is searing healthy flesh!"
2.65 say "instruction"
3.03 rate BAD "Scorched" +15 combo=0
3.03 spawn SimpleBurn @(758,443)
3.55 rate BAD "Scorched" +15 combo=0
3.55 spawn SimpleBurn @(737,448)
4.07 rate BAD "Scorched" +15 combo=0
4.07 spawn SimpleBurn @(762,458)
4.25 cue burn
4.33 cue burn
4.38 cue burn
4.42 cue burn
4.47 cue burn
4.67 cue burn
4.77 rate COOL "Silenced" +105 combo=1
5.27 rate BAD "Scorched" +15 combo=0
5.27 spawn SimpleBurn @(560,449)
5.78 rate BAD "Scorched" +15 combo=0
5.78 spawn SimpleBurn @(539,454)
6.30 rate BAD "Scorched" +15 combo=0
6.30 spawn SimpleBurn @(565,464)
6.70 cue burn
6.80 cue burn
6.95 cue burn
6.98 cue burn
7.00 rate COOL "Silenced" +105 combo=1
7.50 rate BAD "Scorched" +15 combo=0
7.50 spawn SimpleBurn @(722,436)
8.02 rate BAD "Scorched" +15 combo=0
8.02 spawn SimpleBurn @(701,441)
8.10 popup "White-hot! Let it cool."
8.10 flag overheat
8.10 say "The brand’s overheated. Give it a moment between searings."
8.10 say "instruction"
8.72 popup "The brand is too hot!"
10.38 cue burn
10.48 cue burn
10.62 cue burn
10.67 cue burn
10.67 rate COOL "Silenced" +105 combo=1
10.68 say "The choir is silenced — its heart is bare! Brand it, now!"
11.02 flag lauds-hymn
11.02 say "It’s singing — every verse tears him open! Stitch the cuts as they come!"
11.02 say "instruction"
11.02 cue sfx.lauds.hymn
11.23 cue burn
11.45 spawn LaudsBody radius=32.1 optional @(854,398)
11.45 spawn LightThread optional @(654,398)
11.45 say "It has split in two — and the halves sing to each other! Strike one, then the other, before it answers!"
11.45 rate GOOD "Wounded" +66 combo=2
11.45 -- split: status=running vitals=71.3 score=606 combo=2 counts=4/1/8/0 live=[LaudsMalison,SimpleBurn,SimpleBurn,SimpleBurn,SimpleBurn,SimpleBurn,SimpleBurn,SimpleBurn,SimpleBurn,LaudsBody,LightThread] phase="response" hp=65
"
`;

exports[`Malison of Lauds > Call: four Voices; branding the core while they live says lauds-shielded and does no damage 1`] = `
"2.02 initial LaudsMalison radius=42 hp=100 @(660,440)
2.02 flag lauds-shielded
2.02 say "The Voices shield it. Silence them first — trace each one’s sigil with the brand."
2.02 say "instruction"
3.03 -- branded the shielded core: status=running vitals=98.6 score=0 combo=0 counts=0/0/0/0 live=[ChoirVoice,ChoirVoice,ChoirVoice,ChoirVoice,LaudsMalison] hp=100
"
`;

exports[`Malison of Lauds > Dawn: submerged, found with the Lens, unmade into three hexstone shards 1`] = `
"2.02 initial LaudsMalison radius=33.6 hp=30 hidden @(660,440)
2.03 spawn BossRot r=26 @(660,440)
2.03 flag first-rot
2.03 say "Rot must be salved almost entirely — any island left creeps back."
2.03 say "instruction"
2.52 popup "Found it!"
2.52 flag lauds-surface
2.52 say "There! It’s surfacing — brand it before it dives!"
2.52 say "instruction"
2.83 -- found: status=running vitals=98.4 score=0 combo=0 counts=0/0/0/0 live=[DawnOverlay,LaudsMalison,BossRot] submerged=false
3.27 cue burn
3.42 cue burn
3.48 cue burn
3.50 cue burn
3.60 spawn BossDeath optional @(622,419)
3.60 rate COOL "Malison unmade" +105 combo=1
3.60 say "It shattered — hexstone, everywhere! Get every shard out before it spoils him!"
3.60 spawn Embedded kind=hexstone @(687,441)
3.60 flag first-hexstone
3.60 say "Hexstone: brand it still, then into the lead dish — never the tray."
3.60 say "instruction"
3.60 spawn Embedded kind=hexstone @(567,452)
3.60 spawn Embedded kind=hexstone @(614,365)
3.63 -- unmade: status=running vitals=97.9 score=105 combo=1 counts=1/0/0/0 live=[BossDeath,Embedded,Embedded,Embedded] alive=false
"
`;

exports[`Malison of Lauds > a Voice is silenced by tracing its sigil with the brand (COOL "Silenced"); a plain hold does nothing 1`] = `
"2.02 initial LaudsMalison radius=42 hp=100 @(660,440)
2.52 flag lauds-voice-trace
2.52 say "Holding it there won’t quiet it — trace the Voice’s sigil with the brand, line by line."
2.52 say "instruction"
3.03 -- held: status=running vitals=98.6 score=0 combo=0 counts=0/0/0/0 live=[ChoirVoice,ChoirVoice,ChoirVoice,ChoirVoice,LaudsMalison] traced=0
3.07 cue burn
3.20 cue burn
3.25 cue burn
3.45 cue burn
3.53 cue burn
3.55 rate COOL "Silenced" +105 combo=1
3.67 flag brand-flesh
3.67 say "Careful! The brand is searing healthy flesh!"
3.67 say "instruction"
4.05 rate BAD "Scorched" +15 combo=0
4.05 spawn SimpleBurn @(744,451)
4.57 rate BAD "Scorched" +15 combo=0
4.57 spawn SimpleBurn @(723,456)
5.27 -- traced: status=running vitals=93 score=135 combo=0 counts=1/0/2/0 live=[ChoirVoice,ChoirVoice,ChoirVoice,LaudsMalison,SimpleBurn,SimpleBurn] alive=false
"
`;

exports[`Malison of Lauds > left bare for more than 5 s, it calls two Voices back, half-traced 1`] = `
"2.02 initial LaudsMalison radius=42 hp=100 @(660,440)
2.05 cue burn
2.18 cue burn
2.23 cue burn
2.43 cue burn
2.52 cue burn
2.53 rate COOL "Silenced" +105 combo=1
2.65 flag brand-flesh
2.65 say "Careful! The brand is searing healthy flesh!"
2.65 say "instruction"
3.03 rate BAD "Scorched" +15 combo=0
3.03 spawn SimpleBurn @(758,443)
3.55 rate BAD "Scorched" +15 combo=0
3.55 spawn SimpleBurn @(737,448)
4.07 rate BAD "Scorched" +15 combo=0
4.07 spawn SimpleBurn @(762,458)
4.25 cue burn
4.33 cue burn
4.38 cue burn
4.42 cue burn
4.47 cue burn
4.67 cue burn
4.77 rate COOL "Silenced" +105 combo=1
5.27 rate BAD "Scorched" +15 combo=0
5.27 spawn SimpleBurn @(560,449)
5.78 rate BAD "Scorched" +15 combo=0
5.78 spawn SimpleBurn @(539,454)
6.30 rate BAD "Scorched" +15 combo=0
6.30 spawn SimpleBurn @(565,464)
6.70 cue burn
6.80 cue burn
6.95 cue burn
6.98 cue burn
7.00 rate COOL "Silenced" +105 combo=1
7.50 rate BAD "Scorched" +15 combo=0
7.50 spawn SimpleBurn @(722,436)
8.02 rate BAD "Scorched" +15 combo=0
8.02 spawn SimpleBurn @(701,441)
8.10 popup "White-hot! Let it cool."
8.10 flag overheat
8.10 say "The brand’s overheated. Give it a moment between searings."
8.10 say "instruction"
8.72 popup "The brand is too hot!"
10.38 cue burn
10.48 cue burn
10.62 cue burn
10.67 cue burn
10.67 rate COOL "Silenced" +105 combo=1
10.68 say "The choir is silenced — its heart is bare! Brand it, now!"
11.02 flag lauds-hymn
11.02 say "It’s singing — every verse tears him open! Stitch the cuts as they come!"
11.02 say "instruction"
11.02 cue sfx.lauds.hymn
11.70 spawn BossWound source=blade length=58.4 bleed=0.5 @(598,286)
11.70 hurt 1
11.70 popup "-1"
15.68 spawn ChoirVoice @(760,467)
15.68 spawn ChoirVoice @(580,423)
15.68 say "It’s calling its Voices back!"
15.68 -- rekindled: status=running vitals=62.4 score=540 combo=1 counts=4/0/8/0 live=[LaudsMalison,SimpleBurn,SimpleBurn,SimpleBurn,SimpleBurn,SimpleBurn,SimpleBurn,SimpleBurn,SimpleBurn,BossWound,ChoirVoice,ChoirVoice] voices=2
"
`;

exports[`Malison of Lauds > sings a Hymn 9 s after the last one passes, after an inhaled tell: each verse opens a boss wound and costs 1 vital 1`] = `
"2.02 initial LaudsMalison radius=42 hp=100 @(660,440)
11.02 flag lauds-hymn
11.02 say "It’s singing — every verse tears him open! Stitch the cuts as they come!"
11.02 say "instruction"
11.02 cue sfx.lauds.hymn
11.70 spawn BossWound source=blade length=50.4 bleed=0.5 @(648,261)
11.70 hurt 1
11.70 popup "-1"
15.70 spawn BloodPool ichor=blood r=8 optional @(645,266)
21.45 cue sfx.lauds.hymn
22.13 spawn BossWound source=blade length=45.8 bleed=0.5 @(703,504)
22.13 hurt 1
22.13 popup "-1"
23.02 -- two verses: status=running vitals=85.9 score=0 combo=0 counts=0/0/0/0 live=[ChoirVoice,ChoirVoice,ChoirVoice,ChoirVoice,LaudsMalison,BossWound,BloodPool,BossWound] verses=[1,1]
"
`;
